Added a Swift version

--- a/util/pbsvg/Makefile
+++ b/util/pbsvg/Makefile
@@ -1,2 +1,7 @@
-pbsvg: pbsvg.m
-	clang -framework Cocoa -O3 $^ -o $@
+all: pbsvg_objc
+
+pbsvg_objc: pbsvg.m
+	clang -framework Cocoa -O3 $^ -o pbsvg
+
+pbsvg_swift: pbsvg.swift
+	swiftc $^ -o pbsvg
